# TimeGlass

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  UI_AUDIT.md  UI_IST_ANALYSE.md  index.html  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: app-tester.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DayDetail.tsx  PrimaryPunchButton.tsx  PrintableReport.tsx  SessionGuards.tsx  StatCard.tsx
src/db/: leaveEntries.ts  plants.ts  schema.ts  settings.ts  timeEntries.ts
src/lib/: appMode.test.ts  appMode.ts  dataQuality.test.ts  dataQuality.ts  dateUtils.test.ts  dateUtils.ts  formatting.ts  holidays.test.ts  holidays.ts  leaveCalculations.test.ts  leaveCalculations.ts  performanceMode.test.ts  performanceMode.ts  plantGlass.test.ts  plantGlass.ts  reminders.test.ts  reminders.ts  statistics.test.ts  statistics.ts  timeCalculations.test.ts  timeCalculations.ts
src/pages/: DashboardPage.tsx  LeavePage.tsx  MonthPage.tsx  PlantGlassApp.tsx  SettingsPage.tsx  TodayPage.tsx  WeekPage.tsx  YearPage.tsx
src/styles/: global.css
