[package]
name = "timeglass"
version = "0.2.0"
description = "Private Arbeitszeit- und Gleitzeitübersicht"
authors = ["TimeGlass"]
edition = "2021"

[lib]
name = "timeglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
