[package]
name = "timeglass"
version = "0.4.0"
description = "Private Arbeitszeit- und Gleitzeitübersicht"
authors = ["TimeGlass"]
edition = "2021"

[lib]
name = "timeglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }
